--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Watss dizz???</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,9 +14,9 @@
   <link rel="stylesheet" href="./style/main.css" />
 </head>
 
-<body class="background">
+<body style="background-color: rgb(250, 203, 211);">
 
-    <audio class="song" loop autoplay>
+    <audio class="song" loop>
         <source src="./music/mananatili.mp3">
         </source>
     </audio>
@@ -37,7 +37,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday bakssss!! Bilis ng panahon no? Hope that you'll have fun this day kasii it's your special day!!! Always remember na nandito kami lagi ng mga frenny mo kapag kailangan mo ng smth. P.S. wala kang maha dahil di ka naman nagbigay ng pangluto. 
+                Happy birthday bakssss!! Bilis ng panahon no, I still remember yung time na nagkakilala tayo habang nag papractice para sa sayaw, I hope na nagsasaya ka ng sobra with your new friends. My birthday wish for you is sana you don't give up in life, you can rest if you're tired na but it doesn't mean na tapos na yung journey mo kasi it's just a preparation for your future. PS. wala kang maha dahil di ka naman nagbigay ng pangluto. 
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
